# XTPReader

./: CMakeLists.txt  readme.md
include/: XTPReader.hh  csv.h
src/: RD_py.cc  XTPReader.cc  main.cc
test/: CMakeLists.txt  demo.csv  demo_t.csv  simulate.py
